feat: add PostgreSQL support and update data source configuration